--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(Voxel3_CLION)
 set(CMAKE_CXX_STANDARD 11)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
-add_executable(Voxel3_CLION Engine/Sources/main.cpp Engine/Sources/actor.cpp Engine/Headers/actor.h Engine/Sources/mesh.cpp Engine/Headers/mesh.h Engine/Sources/object3d.cpp Engine/Headers/object3d.h Engine/Sources/transform.cpp Engine/Headers/transform.h Engine/Sources/window.cpp Engine/Headers/window.h Engine/Sources/world.cpp Engine/Headers/world.h Engine/Sources/glad.c Engine/Sources/Camera.cpp Engine/Headers/Camera.h Engine/Sources/Renderer.cpp Engine/Headers/Renderer.h Geometry/Sources/Shader.cpp Geometry/Headers/Shader.h Geometry/Sources/FieldManager.cpp Geometry/Headers/FieldManager.h Engine/Sources/noiseutils.cpp Engine/Headers/noiseutils.h)
+add_executable(Voxel3_CLION Engine/Sources/main.cpp Engine/Sources/actor.cpp Engine/Headers/actor.h Engine/Sources/mesh.cpp Engine/Headers/mesh.h Engine/Sources/object3d.cpp Engine/Headers/object3d.h Engine/Sources/transform.cpp Engine/Headers/transform.h Engine/Sources/window.cpp Engine/Headers/window.h Engine/Sources/world.cpp Engine/Headers/world.h Engine/Sources/glad.c Engine/Sources/Camera.cpp Engine/Headers/Camera.h Engine/Sources/Renderer.cpp Engine/Headers/Renderer.h Engine/Sources/Shader.cpp Engine/Headers/Shader.h Geometry/Sources/FieldManager.cpp Geometry/Headers/FieldManager.h Engine/Sources/noiseutils.cpp Engine/Headers/noiseutils.h Engine/Sources/Sun.cpp Engine/Headers/Sun.h)
 
 include_directories(include)
 
